--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,10 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-light"
-     style="min-height: 80px;background: linear-gradient(180deg, #0092d9, transparent);">
+    style="min-height: 80px;background: linear-gradient(180deg, #0092d9, transparent);">
     <a class="navbar-brand" href="#"><img src="{% static 'assets/img/logoG.png' %}" alt="dash" style="height: 60px"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar" aria-controls="sidebar"
-            aria-expanded="false" aria-label="Toggle navigation">
+        aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -19,7 +19,7 @@
             <li class="nav-item mx-3 {% if request.path == '/add_employe' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'add_employe' %}">
                     <img src="{% static 'assets/img/add-user.png' %}" alt="dash">
-                    Ajouter employéeeeeee
+                    Ajouter emplyée
                 </a>
             </li>
             <li class="nav-item mx-3 {% if request.path == '/list_employes' %}active{% endif %}">
