--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,7 +19,7 @@
             <li class="nav-item mx-3 {% if request.path == '/add_employe' %}active{% endif %}">
                 <a class="nav-link" href="{% url 'add_employe' %}">
                     <img src="{% static 'assets/img/add-user.png' %}" alt="dash">
-                    Ajouter employé
+                    Ajouter employéeeeeee
                 </a>
             </li>
             <li class="nav-item mx-3 {% if request.path == '/list_employes' %}active{% endif %}">
