--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,12 +13,12 @@
         height: 40px;
         background-image: linear-gradient(180deg, #f6f7f900, #1ca7e2);
         color: black;
-        font-weight: 500;
-        font-family: cursive;
+        font-weight: 700;
+        font-family: "Bell MT";
     }
 
 </style>
 
 <div class="footer">
-    Copyright@DUESS 2023.ENSA OUJDA
+    Copyright © DUESS SIC 2022 - 2023. ENSA OUJDA
 </div>
