--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,7 +8,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Nombre des employée</h5>
-                        <p class="card-text text-center">15</p>
+                        <p class="card-text text-center">{{ employee_count }}</p>
                     </div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Nombre d'absences</h5>
-                        <p class="card-text text-center">2</p>
+                        <p class="card-text text-center">0</p>
                     </div>
                 </div>
             </div>
