--- a/templates/liste_employes.html
+++ b/templates/liste_employes.html
@@ -7,7 +7,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header py-3" style="background-color: #0092d9;color: white;">
-                        <h4>Tableau des Employées:</h4>
+                        <h4>Tableau des Employés:</h4>
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
