Last version(avec email)
salam, voila la derniere version( y compris envois de rapport via email)

--- a/templates/add_empl.html
+++ b/templates/add_empl.html
@@ -75,7 +75,7 @@
         const client = mqtt.connect(url, options)
 
         // subscribe to a topic
-        client.subscribe('duess/rfid/dv1/uid');
+        client.subscribe('duess/rfid/dv1/uidz');
 
         // handle incoming messages
         client.on('message', function (topic, message) {
